@@ -1,5 +1,5 @@
 package: PandoraFMS-Server
-Version: 3.0.0.rc2
+Version: 3.0.0.RC3
 Architecture: all
 Priority: optional
 Section: admin
